--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "dav": "^1.7.8",
     "es6-promise": "^4.2.4",
     "fs-extra": "^5.0.0",
-    "iconv": "^2.3.0",
+    "iconv-lite": "^0.4.19",
     "md5": "^2.2.1",
     "request": "^2.83.0",
     "request-promise-native": "^1.0.5",
