--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "iconv-lite": "^0.4.19",
     "ldapjs": "^1.0.2",
     "md5": "^2.2.1",
+    "nodemailer": "^4.6.4",
     "request": "^2.83.0",
     "request-promise-native": "^1.0.5",
     "shallow-equal-object": "^1.1.1",
