Implemented possibility to just run once

--- a/settings.example.json
+++ b/settings.example.json
@@ -1,5 +1,6 @@
 {
     // update interval in minutes
+    // set to '0' if you only want to update infrequently/manually
     "updateInterval": 5,
     // define your CardDAV accounts here
     "carddav": {
