changed xml to tbook

--- a/settings.example.json
+++ b/settings.example.json
@@ -126,7 +126,7 @@
                 }
             ]
         },
-        "xml": {
+        "tbook": {
             // the final path will be '<webroot>/<dir>/<filename>'
             "webroot": ".",
             "dir": "",
