--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jsonexport": "^3.2.0",
     "ldapjs": "^2.3.3",
     "md5": "^2.3.0",
+    "minimist": "^1.2.8",
     "nodemailer": "^6.9.1",
     "request": "^2.88.2",
     "request-promise-native": "^1.0.9",
