replaced dependency request with got, needed module upgrade

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "node-carddav2phone",
   "version": "2.2.0",
   "description": "A CardDAV to IP phones converter based on node.js",
-  "main": "dist/index.js",
+  "type": "module",
+  "exports": "./dist/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/alexanderharm/node-carddav2phone"
@@ -28,6 +29,7 @@
     "comment-json": "^4.2.3",
     "dav": "^1.8.0",
     "es6-promise": "^4.2.8",
+    "formdata-node": "^5.0.0",
     "fs-extra": "^11.1.0",
     "got": "^12.5.3",
     "iconv-lite": "^0.6.3",
@@ -36,18 +38,21 @@
     "md5": "^2.3.0",
     "minimist": "^1.2.8",
     "nodemailer": "^6.9.1",
-    "request": "^2.88.2",
-    "request-promise-native": "^1.0.9",
     "shallow-equal-object": "^1.1.1",
     "vcf": "^2.1.1",
     "xml": "^1.0.1",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
+    "@types/dav": "^1.7.4",
     "@types/fs-extra": "^11.0.1",
     "@types/jsonexport": "^3.0.2",
+    "@types/ldapjs": "^2.2.5",
     "@types/md5": "^2.3.2",
+    "@types/minimist": "^1.2.2",
     "@types/node": "^18.13.0",
+    "@types/nodemailer": "^6.4.7",
+    "@types/vcf": "^2.0.3",
     "@types/xml": "^1.0.8",
     "@types/xml2js": "^0.4.11",
     "semver": "^7.3.8",
